[package]
name = "aspa-observatory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgpkit-parser = "0.7.2"
bgpkit-broker = "0.3.2"
chrono = "0.4.24"
clap = "4.3.0"
log = "0.4.17"
rpki = {version="0.15.10", features = ["repository"]}
