[package]
name = "aspa-observatory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgpkit-parser = "0.9.4"
bgpkit-broker = "0.6.1"
chrono = "0.4.24"
clap = "4.3.17"
log = "0.4.17"
rpki = {version="0.16.1", features = ["repository", "crypto"]}
stats-cli = "3.0.1"
itertools = "0.10.5"
serde_json = "1.0.96"
ipnet = "2.7.2"
bcder = "0.7.2"
crossbeam-channel = "0.5.8"
threadpool = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
mysql = "24.0.0"
reqwest = {version = "0.11.18", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.15.0"
futures-util = "0.3.14"

